[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI. The console command is still `technode`
# (see [project.scripts]); PyPI disallows the bare name "technode".
name = "technode-cli"
version = "0.3.0"
description = "TechNode CLI — run inference on compressed open models, rent GPUs, or serve as a provider (RunPod-compatible)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "TechNode", email = "smlee3636@gmail.com" }]
keywords = ["llm", "inference", "gpu", "runpod", "quantized", "technode"]
# Zero runtime dependencies — pure stdlib (urllib). Keeps `pip install technode`
# light and lets the same client run inside minimal/embedded Python.
dependencies = []

[project.urls]
Homepage = "https://technode.network"
"API docs" = "https://technode.network/developers"

[project.scripts]
technode = "technode.cli:main"

[tool.setuptools]
packages = ["technode"]
